welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.error
caughtSpeeding:7: error: reassignment to val
	else {speed=speed-5;
                   ^