welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.code
def caughtSpeeding(speed:Int, isBirthday:Boolean):Int = {
	if (!isBirthday) {
		if (speed<=60) return 0
		if (speed>=61 && speed <=80) return 1
		else  return 2
		}
	else {speed=speed-5;
		if (speed<=60) return 0
		if (speed>=61 && speed <=80) return 1
		else return 2
		
	}
}
